--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,9 @@ dev_dependencies:
 
   hive: ^2.0.6
   hive_flutter: ^1.1.0
-  path_provider: ^2.0.9
+  path_provider:
+  pull_to_refresh: ^2.0.0
+  api_cache_manager: ^1.0.2
 
   toast: ^0.1.5
 
